--- a/homepage.html
+++ b/homepage.html
@@ -61,7 +61,7 @@ I felt very, very small.”</em></a>
 <div class="card">
 <div class="imgBx">
 <figure>
-<img src="img/rajveer.JPG">
+<img src="img/rajveer.jpeg">
 <figcaption style="color: white; position: absolute; top: 90%;"><em>Rajveer Mathur</em></figcaption>
 </figure></div>
 <div class="imgBx1">
