--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
             <li><a href="homepage.html"><span class="glyphicon glyphicon-home"></span><strong> Home</strong></a></li>
 			<li><a href="trial2.html"><span class="glyphicon glyphicon-qrcode"></span><strong> NISAR</strong></a></li>
             <li><a href="Co2.html"><span class="glyphicon glyphicon-cog"></span><strong> CO2 Convertor</strong></a></li>
-            <li><a href="page2.html"><span class="glyphicon glyphicon-briefcase"></span><strong> Significant contributors</strong></a></li>
+            <li><a href="sc.html"><span class="glyphicon glyphicon-briefcase"></span><strong> Significant contributors</strong></a></li>
 			<li><a href="satellites.html"><span class="glyphicon glyphicon-dashboard"></span><strong> Satellites</strong></a></li>
 </ul>
             
