--- a/trial2.html
+++ b/trial2.html
@@ -94,9 +94,9 @@ color: #f1f1f1;
             <ul class="nav navbar-nav navbar-right">
             <li><a href="homepage.html"><span class="glyphicon glyphicon-home"></span><strong> Home</strong></a></li>
 			<li><a href="#"><span class="glyphicon glyphicon-qrcode"></span><strong> NISAR</strong></a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-cog"></span><strong> CO2 Convertor</strong></a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-briefcase"></span><strong> Significant contributors</strong></a></li>
-			<li><a href="#"><span class="glyphicon glyphicon-dashboard"></span><strong> Satellites</strong></a></li>
+            <li><a href="Co2.html"><span class="glyphicon glyphicon-cog"></span><strong> CO2 Convertor</strong></a></li>
+            <li><a href="sc.html"><span class="glyphicon glyphicon-briefcase"></span><strong> Significant contributors</strong></a></li>
+			<li><a href="satellites.html"><span class="glyphicon glyphicon-dashboard"></span><strong> Satellites</strong></a></li>
 </ul>
             
 
