--- a/Co2.html
+++ b/Co2.html
@@ -18,7 +18,7 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background-image: url("space-wallpaper-046.jpg");
+  background-image: url("IMAGES/space-wallpaper-046.jpg");
   color: white;
 }
 
@@ -122,7 +122,7 @@ font-family: Cambria;
 <h2> Zero Carbon Footprint</h2>
     <p>NASA has developed a new technology that can convert the greenhouse gas carbon dioxide (C02) into fuel by using solar-powered, thin-film devices.<br> Metal oxide thin films are fabricated to produce a photoelectrochemical cell that is powered by solar energy. By converting CO2 to fuel before it is emitted to the atmosphere this technology can mitigate the effects of the burning of fossil fuels, the worlds major fuel source for the foreseeable future This new nanomaterial thin-film device provides a low cost, facile fabrication pathway to commercialize the technology in the sustainable energy market. More importantly, it results in a zero carbon footprint by recycling C02 to fuels that are compatible with all existing fuel utilities.<br> This is accomplished by using solar power to convert the C02 into a useable fuel in a very compact device.</p>
      <br> <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Earth_horizon_and_International_Space_Station_solar_panel_array_%28Expedition_17_crew%2C_August_2008%29.jpg" alt="solar cell" width="300" height="300">
-<img src="bsmart.jpeg" alt="carbon" width ="400" height = "300">
+<img src="IMAGES/bsmart.jpeg" alt="carbon" width ="400" height = "300">
 <h2> Working</h2>
 <p> This technology consists of a photoelectrochemical cell composed of thin metal oxide films. It uses sunlight (primarily the ultraviolet (UV), visible and Infrared (IR) portions)) and inexpensive titanium dioxide composites to perform the reaction. <br>The device can be used to capture carbon dioxide produced in industrial processes before it is emitted to the atmosphere and convert it to a useful fuel such as methane. These devices can be deployed to the commercial market with low manufacturing and materials costs. They can be made extremely compact and efficient and used in sensor and detector applications.</div>
 
