--- a/sc.html
+++ b/sc.html
@@ -52,7 +52,7 @@
 </div>
 <div class="card1">
 <div class="gallery">
-<img src="img1/s2.jpg">
+<img src="img1/s2.jpg" style="height:300px">
 </div>
 <div class="desc">
 <h3><br> &nbsp3.<u><i> SUNITA WILLLIAMS, Ranked Second In USA Endurance List Of Female Astronauts</u></i></h3>
